Allow conversion to float images with some M-LUTs and allow float images for 3D rendering